# picoruby-esp32

./: .gitmodules  AGENTS.md  CMakeLists.txt  UPDATE.md  picoruby-esp32.c
build_config/: xtensa-esp-femtoruby.rb
mrblib/: main_task.rb
tools/: ai_debug_cli.py
